--- a/base/hello.yml
+++ b/base/hello.yml
@@ -34,7 +34,7 @@ spec:
     app: hello
   type: ClusterIP
 ---
-apiVersion: extensions/v1beta1
+apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: hello
