--- a/base/hello.yml
+++ b/base/hello.yml
@@ -46,7 +46,9 @@ spec:
         paths:
         pathType: Prefix
           - backend:
-              serviceName: hello
-              servicePort: 8080
+              service:
+                name: hello
+                port: 
+                  number: 8080
 ---
 
